added dynamic selected tab values

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             "is_lazy_loading_activated": true
         };
         ProtoGraph.page = {
-            "headline": "Deployment Approach 4 - Promote 1 HP and sub-HP pump",
+            "headline": "No. of conflicts",
             "cover_image_url": "https://d8iy6v3lrjtwm.cloudfront.net/images/JagranNews/4779f06ff1581ab9/2643.jpeg",
             "cover_image_url_7_column": "https://d8iy6v3lrjtwm.cloudfront.net/images/JagranNews/416b1d13e1acad24/2440.jpeg",
             "filterConfigsURL": "./data/har-khet-ko-pani.json"
