--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
         };
         ProtoGraph.page = {
             "headline": "No. of conflicts",
+            "summary": "Land Conflict Watch is a research-based data journalism project that maps and analyzes ongoing land conflicts in India.",
             "cover_image_url": "https://d8iy6v3lrjtwm.cloudfront.net/images/JagranNews/4779f06ff1581ab9/2643.jpeg",
             "cover_image_url_7_column": "https://d8iy6v3lrjtwm.cloudfront.net/images/JagranNews/416b1d13e1acad24/2440.jpeg",
             "filterConfigsURL": "./data/har-khet-ko-pani.json"
