about proto to powered by proto

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
-    <link rel="icon" type="image/png" href="https://d8iy6v3lrjtwm.cloudfront.net/images/JagranNews/e4c4cb2201515439/2365.vnd.microsoft.icon"
-    />
+    <link rel="icon" type="image/png" href="https://d8iy6v3lrjtwm.cloudfront.net/images/JagranNews/e4c4cb2201515439/2365.vnd.microsoft.icon" />
 
 
     <!-- Facebook Meta Tags -->
@@ -46,7 +45,7 @@
         </div>
         <div class="proto-col col-16 proto-verticals-navbar">
             <div class="proto-vertical-name" id="homepage_nav">
-                <h1 class="navbar-project-title"><span style='font-weight:normal'>#</span>जलजागरण</h1>
+                <h1 class="navbar-project-title"><span style="font-weight:normal">#</span>जलजागरण</h1>
                 <i class="chevron down icon proto-hide"></i>
             </div>
             <div class="page-navigation-options" id="vertical_nav"></div>
@@ -55,22 +54,22 @@
 
                 <div class="single-link facebook">
                     <a href="https://www.facebook.com/dainikjagran" target="_blank">
-                                <img src="https://cdn.protograph.pykih.com/Assets/proto-app/img/fb-white.png">
-                            </a>
+                        <img src="https://cdn.protograph.pykih.com/Assets/proto-app/img/fb-white.png">
+                    </a>
                 </div>
 
 
                 <div class="single-link twitter">
                     <a href="https://twitter.com/JagranNews" target="_blank">
-                                <img src="https://cdn.protograph.pykih.com/Assets/proto-app/img/tw-white.png">
-                            </a>
+                        <img src="https://cdn.protograph.pykih.com/Assets/proto-app/img/tw-white.png">
+                    </a>
                 </div>
 
 
                 <div class="single-link">
                     <a href="https://p.jagran.com/339d52dd65eb74feb096344a/index.xml" target="_blank">
-                                <img src="https://cdn.protograph.pykih.com/Assets/rss-white-icon.png" height="14px" width="14px">
-                            </a>
+                        <img src="https://cdn.protograph.pykih.com/Assets/rss-white-icon.png" height="14px" width="14px">
+                    </a>
                 </div>
 
             </div>
@@ -78,7 +77,7 @@
         <div class="mobile-navigation">
             <div class="mobile-navbar">
                 <div class="branding">
-                    <h1 class="navbar-project-title"><span style='font-weight:normal'>#</span>जलजागरण</h1>
+                    <h1 class="navbar-project-title"><span style="font-weight:normal">#</span>जलजागरण</h1>
                     <i class="chevron down icon proto-hide"></i>
                 </div>
                 <div class="right-float-div">
@@ -96,22 +95,22 @@
 
                     <div class="single-link facebook">
                         <a href="https://www.facebook.com/dainikjagran" target="_blank">
-                                    <img src="https://cdn.protograph.pykih.com/Assets/proto-app/img/fb-black.png">
-                                </a>
+                            <img src="https://cdn.protograph.pykih.com/Assets/proto-app/img/fb-black.png">
+                        </a>
                     </div>
 
 
                     <div class="single-link twitter">
                         <a href="https://twitter.com/JagranNews" target="_blank">
-                                    <img src="https://cdn.protograph.pykih.com/Assets/proto-app/img/tw-black.png">
-                                </a>
+                            <img src="https://cdn.protograph.pykih.com/Assets/proto-app/img/tw-black.png">
+                        </a>
                     </div>
 
 
                     <div class="single-link">
                         <a href="https://p.jagran.com/339d52dd65eb74feb096344a/index.xml" target="_blank">
-                                    <img src="https://cdn.protograph.pykih.com/Assets/rss-white-icon.png" height="14px" width="14px">
-                                </a>
+                            <img src="https://cdn.protograph.pykih.com/Assets/rss-white-icon.png" height="14px" width="14px">
+                        </a>
                     </div>
 
                 </div>
@@ -140,7 +139,12 @@
                 "url": "https://d2izuvkqhcn1gq.cloudfront.net/3085c3451ef0813e425ca73d/index.json",
                 "name_of_stream": "11_Section_data"
             },
-            "16c_Hero":{"id":2327,"title":"453_Data_16c_Hero","datacast_identifier":"c66a590e23e9c37bef06875b","url":"https://d2a8orkbl0gwbe.cloudfront.net/c66a590e23e9c37bef06875b/index.json","name_of_stream":"Hero"
+            "16c_Hero": {
+                "id": 2327,
+                "title": "453_Data_16c_Hero",
+                "datacast_identifier": "c66a590e23e9c37bef06875b",
+                "url": "https://d2a8orkbl0gwbe.cloudfront.net/c66a590e23e9c37bef06875b/index.json",
+                "name_of_stream": "Hero"
             }
         };
         ProtoGraph.site = {
@@ -185,11 +189,13 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117995620-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
         gtag('js', new Date());
 
         gtag('config', 'UA-117995620-1');
-
     </script>
 
 </body>
