removed number from filters,removed by land conlfict line from header

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             "is_lazy_loading_activated": true
         };
         ProtoGraph.page = {
-            "headline": "No. of people affected",
+            "headline": "No. of conflicts",
             "summary": "Land Conflict Watch is a research-based data journalism project that maps and analyzes ongoing land conflicts in India.",
             "cover_image_url": "https://d8iy6v3lrjtwm.cloudfront.net/images/JagranNews/4779f06ff1581ab9/2643.jpeg",
             "cover_image_url_7_column": "https://d8iy6v3lrjtwm.cloudfront.net/images/JagranNews/416b1d13e1acad24/2440.jpeg",
